--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -28,14 +28,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
-  },
+  }
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false,
     "anonymousAuthentication": false,
     "iisExpress": {
       "applicationUrl": "https://localhost:8080",
       "sslPort": 44311
-    }
+    },
+    "windowsAuthentication": false
   }
 }
