--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7263;http://localhost:5202"
+      "applicationUrl": "http://localhost:5202;https://localhost:7263"
     },
     "IIS Express": {
       "commandName": "IISExpress",
