--- a/PortfolioWebsite_Backend.csproj
+++ b/PortfolioWebsite_Backend.csproj
@@ -42,10 +42,16 @@
     <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Xunit.Gherkin.Quick" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Helpers\temp\" />
     <Folder Include="Migrations\" />
+    <Folder Include="Features\" />
+	<None Update="Features\**\*.feature">
+	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</None>
   </ItemGroup>
 
 </Project>
