--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -21,13 +21,13 @@
       "launchUrl": "swagger"
     },
     "IIS Express": {
+      "applicationUrl": "http://localhost:5202",
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-      //"applicationUrl": "http://localhost:5202"
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
