Building units - about half way done with User Service

--- a/PortfolioWebsite_Backend.csproj
+++ b/PortfolioWebsite_Backend.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>6dedff6e-2bae-4f2d-b426-e76fc86553b3</UserSecretsId>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
