Added "Testing" Enviroment for Performance Testing

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,11 +1,9 @@
 {
   "profiles": {
-    "http": {
+    "performance_testing": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Testing"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5202"
