--- a/PortfolioWebsite_Backend.csproj
+++ b/PortfolioWebsite_Backend.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="AspNetCore.HealthChecks.UI.Core" Version="6.0.5" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.MySql.Storage" Version="6.0.5" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.6.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Cucumber.Messages" Version="21.0.1" />
     <PackageReference Include="F23.StringSimilarity" Version="5.1.0" />
